--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,6 +3,6 @@
     <app-recipe-list (recipeSelected)="selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <!--<app-recipe-detail [selectedRecipe]="selectedRecipe"></app-recipe-detail>-->
+    <app-recipe-detail [selectedRecipe]="selectedRecipe"></app-recipe-detail>
   </div>
 </div>
