--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -25,8 +25,8 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Checkout</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle">Muhammad Farhan <span class="caret"></span></a>
+        <li class="dropdown" appdropdown>
+          <a href="#" class="dropdown-toggle">Farhan <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
