--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,14 +1,6 @@
-<div class="row">
-    <div class="col-xs-12">
-        <a class="btn btn-success">New Recipe</a>
-    </div>
-</div>
+<a class="btn btn-success">New Recipe</a>
 <hr>
 <div class="row">
-    <div class="col-xs-12">
-        <ul class="list-group">
-            <app-recipe-item [recipe]="recipe" (click)="onSelected(recipe)"></app-recipe-item>
-        </ul>
-    </div>
+    <div class="col-sm-6 col-md-6" app-recipe-item *ngFor="let recipe of recipes" [recipe]="recipe" (click)="onSelected(recipe)"></div>
 </div>
 
