--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,7 @@
 <div app-shopping-list-add></div>
 <hr>
 <ul class="list-group">
-  <a class="list-group-item" style="cursor: pointer" ngFor="let item of items"></a>
+  <a class="list-group-item" style="cursor: pointer" *ngFor="let item of items">{{item.name}} ({{item.amount}})</a>
 </ul>
 
 <br>
