--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-6">
-    <app-recipe-list (recipeSelected)="selectedRecipe = $event"></app-recipe-list>
+    <div app-recipe-list (recipeSelected)="selectedRecipe = $event"></div>
   </div>
   <div class="col-md-6">
-    <app-recipe-detail [selectedRecipe]="selectedRecipe"></app-recipe-detail>
+    <div app-recipe-detail [selectedRecipe]="selectedRecipe"></div>
   </div>
 </div>
