--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,7 @@
 <div class="text-right">
   <button class="btn btn-success" (click)="onAddToShoppingList()">To Shopping List</button>
-  <button class="btn btn-primary">Edit</button>
-  <button class="btn btn-danger">Delete</button>
+  <button class="btn btn-primary" (click)="onEdit()">Edit</button>
+  <button class="btn btn-danger" (click)="onDelete()">Delete</button>
 </div>
 <hr>
 <img src="{{selectedRecipe?.imagePath}}" alt="" class="img-responsive">
