--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-6">
-    <div app-recipe-list (recipeSelected)="selectedRecipe = $event"></div>
+    <div app-recipe-list></div>
   </div>
   <div class="col-md-6">
-    <div app-recipe-detail [selectedRecipe]="selectedRecipe"></div>
+    <router-outlet></router-outlet>
   </div>
 </div>
