--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <header></header>
-<div app-recipes class="container"></div>
-<div app-shopping-list class="container"></div>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
