--- a/src/app/shopping-list/shopping-list-add.component.html
+++ b/src/app/shopping-list/shopping-list-add.component.html
@@ -1,4 +1,4 @@
-<form id="shopping-list-add">
+<form id="shopping-list-add" (ngSubmit)="onSubmit(f.value)" #f="ngForm">
   <div class="row">
     <div class="col-sm-5 form-group">
       <label for="item-name">Name</label>
@@ -12,9 +12,10 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <button class="btn btn-success" type="submit">Add</button>
-      <button class="btn btn-danger" type="button">Delete Item</button>
-      <button class="btn btn-primary" type="button">Clear</button>
+      <button class="btn btn-success" type="submit" *ngIf="isAdd" [disabled]="!f.valid">Add</button>
+      <button class="btn btn-success" type="submit" *ngIf="!isAdd" [disabled]="!f.valid">Save</button>
+      <button class="btn btn-danger" type="button" *ngIf="!isAdd" (click)="onDelete()">Delete Item</button>
+      <button class="btn btn-primary" type="button" *ngIf="!isAdd" (click)="onClear()">Clear</button>
     </div>
   </div>
 </form>
