--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -10,10 +10,10 @@
       <div class="form-group">
         <label for="name">Title</label>
         <input
-        type="text"
-        id="name"
-        class="form-control"
-        formControlName="name">
+                type="text"
+                id="name"
+                class="form-control"
+                formControlName="name">
       </div>
     </div>
   </div>
@@ -22,11 +22,11 @@
       <div class="form-group">
         <label for="image-url">Image Url</label>
         <input
-        type="text"
-        id="image-url"
-        class="form-control"
-        formControlName="imagePath"
-        #imageUrl>
+                type="text"
+                id="image-url"
+                class="form-control"
+                formControlName="imagePath"
+                #imageUrl>
       </div>
     </div>
   </div>
@@ -53,9 +53,7 @@
   <div class="row">
     <div class="col-xs-12">
       <ul class="list-group" formArrayName="ingredients">
-        <div
-                class="row"
-                *ngFor="let ingredient of recipeForm.controls['ingredients'].controls; let i = index">
+        <div class="row" *ngFor="let ingredient of recipeForm.controls['ingredients'].controls; let i = index">
           <div formGroupName="{{i}}">
             <div class="col-sm-5">
               <input
@@ -73,22 +71,26 @@
               <button class="btn btn-danger" (click)="onRemoveItem(i)">X</button>
             </div>
           </div>
+
           <br><br>
         </div>
       </ul>
     </div>
   </div>
 </form>
+
 <hr>
-<div class="form-group">
+
+<div class="form-group row">
   <div class="col-md-5"><input type="text" class="form-control" #itemName></div>
   <div class="col-md-5"><input type="text" class="form-control" #itemAmount></div>
   <div class="col-md-2">
     <button
-    type="button"
-    class="btn btn-primary"
-    (click)="onAddItem(itemName.value, itemAmount.value)">+</button>
+            type="button"
+            class="btn btn-primary"
+            (click)="onAddItem(itemName.value, itemAmount.value)">+</button>
   </div>
 </div>
+
 
 
