--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -26,13 +26,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Checkout</a></li>
         <li class="dropdown" appdropdown>
-          <a href="#" class="dropdown-toggle">Farhan <span class="caret"></span></a>
+          <a  class="dropdown-toggle"
+              role="button"
+              aria-haspopup="true"
+              aria-expanded="false">Recipe Management <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a (click)="onStore()" style="cursor: pointer;">Store Recipes</a></li>
+            <li><a (click)="onFetch()" style="cursor: pointer;">Retrieve Recipes</a></li>
           </ul>
         </li>
       </ul>
