--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -35,6 +35,7 @@
           <ul class="dropdown-menu">
             <li><a (click)="onStore()" style="cursor: pointer;">Store Recipes</a></li>
             <li><a (click)="onFetch()" style="cursor: pointer;">Retrieve Recipes</a></li>
+            <li><a (click)="onShow()" style="cursor: pointer;">Show Data</a></li>
           </ul>
         </li>
       </ul>
